mvnplugin: hand-written Maven plugin descriptor (META-INF/maven/plugin.xml)
Auto-generation from the @Mojo/@Parameter annotations stays blocked (the
de.benediktritter.maven-plugin-development tool is Gradle-9-incompatible), so
add a hand-maintained descriptor instead. It describes all five goals — run,
write-input-configuration, statistics, write-analysis-hints,
compile-analysis-hints — with goalPrefix=maddi, each carrying its full
parameter+configuration block (the 18 CommonMojo params, the read-only
project/session, and the per-mojo extras) plus the ProjectDependenciesResolver
component as a <requirement>.

processResources substitutes @project.version@ (ReplaceTokens uses @..@, so
Maven's own ${...} expressions are untouched), so the descriptor version tracks
gradle.properties. The file is packaged into the jar at META-INF/maven/plugin.xml,
so `mvn maddi:<goal>` resolves the goals.

Verified: well-formed (xmllint); a field-by-field cross-check confirms every
descriptor parameter/configuration element matches a real @Parameter field in
the corresponding mojo class (no missing, no stray). Keep it in sync by hand
when a mojo's parameter set changes.

Still pending for a Central-consumable plugin: shade the (unpublished) analyzer
modules into the jar (same technique as the Gradle plugin).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>